Changelog
=========


4.0-dev - (unreleased)
----------------------

* Feature: Added upgrade steps
  [voineali #4392]

* Feature: ported package to plone 4.0.4
  [ichimdav #4233]


1.0 - (2011-03-16)
------------------

* Initial release
  [voineali]